# github-manager

./: .env.example  .gitignore  CLAUDE.md  README.md  install.sh  mcp.json  pyproject.toml  start_sse.sh
.claude/agents/doc-writer/: agent.yml
.claude/agents/quality-auditor/: agent.yml
.claude/agents/tool-developer/: agent.yml
.claude/agents/workflow-optimizer/: agent.yml
.claude/docs/: architecture.md  environment.md
.claude/skills/fastmcp-optimizer/: SKILL.md
.claude/skills/github-workflow-expert/: SKILL.md
.claude/skills/mcp-tool-builder/: SKILL.md
.claude/skills/python-quality-guard/: SKILL.md
config/: mcp-config.example.json
docs/: CLAUDE_CODE_PROMPT_GUIDELINES.md  architecture.md  connecting-llms.md
examples/: README.md  rest_wrapper.py
scripts/: check_endpoints.sh  start_sse.sh  tools.sh
src/github_manager/: __init__.py  config.py  server.py
src/github_manager/automation/: __init__.py  tools.py
src/github_manager/backup/: __init__.py  tools.py
src/github_manager/repository/: tools.py
src/github_manager/workspace/: __init__.py  tools.py
tests/: list_tools.py  test_mcp.py
